Converted react-select to materialui select component to fix issue with select not showing update of attendance/hw date/name

--- a/react-app/src/pages/ClassPage/ClassAttendance/ClassAttendance.module.css
+++ b/react-app/src/pages/ClassPage/ClassAttendance/ClassAttendance.module.css
@@ -24,11 +24,15 @@
   padding: 10px 12px 8px 12px;
 }
 
-.dateSelection {
+.selection {
   float: right;
-  width: 155px;
+  width: auto;
+  min-width: 125px;
   margin-right: 10%;
-  height: 25px;
+  height: 45px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
 .noStudent {
