--- a/react-app/src/pages/ClassPage/ClassHomework/ClassHomework.module.css
+++ b/react-app/src/pages/ClassPage/ClassHomework/ClassHomework.module.css
@@ -26,9 +26,13 @@
 
 .selection {
   float: right;
-  width: 170px;
+  width: auto;
+  min-width: 125px;
   margin-right: 10%;
-  height: 25px;
+  height: 45px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
 .noStudent {
